--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: my-secret-password
-      MYSQL_DATABASE: mydb
+      MYSQL_DATABASE: choco_calculator
     ports:
       - "3306:3306"
     volumes:
